<resources>
    <string name="app_name">SkyNET</string>

    <string name="get_robots">Получить всех роботов</string>
    <string name="add_robot">Добавить робота</string>

    <string name="robot_name">Название робота</string>
    <string name="robot_type">Тип робота</string>
    <string name="robot_year">Год создания</string>

    <string-array name="robot_types">
        <item>Мобильный</item>
        <item>Стационарный</item>
        <item>Промышленный</item>
        <item>Бытовой</item>
        <item>Антропоморфный</item>
        <item>Линейный</item>
    </string-array>

    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>

</resources>
