<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/add_robot"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_robot_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/robot_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/add_robot_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/robot_year"
            android:inputType="number"
            android:maxLength="4" />

        <Spinner
            android:id="@+id/add_robot_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/robot_types"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_robot_btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="36dp"
            android:paddingBottom="8dp"
            android:paddingRight="4dp"
            android:paddingTop="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <Button
            android:id="@+id/add_robot_btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="36dp"
            android:paddingBottom="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/add"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>